--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NodeRestAppD",
+  "name": "dash-ql",
   "version": "1.0.0",
   "description": "",
   "main": "/lib/main.js",
@@ -15,8 +15,7 @@
     "bluebird": "^3.5.1",
     "lodash": "^4.17.4",
     "request": "^2.83.0",
-    "request-promise": "^4.2.2",
-    "xml-js": "^1.5.2"
+    "request-promise": "^4.2.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
