--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d lib --source-maps both",
     "start": "npm run build && node lib/main.js",
-    "debug": "npm run build && node --inspect lib/main.js"
+    "debug": "npm run build && node --inspect-brk lib/main.js"
   },
   "author": "",
   "license": "ISC",
