--- a/.eslintrc
+++ b/.eslintrc
@@ -1,23 +1,23 @@
 {
   "extends": "airbnb",
   "parserOptions": {
-    "ecmaVersion": 7,
+    "ecmaVersion": 8,
     "ecmaFeatures": {
-      "jsx": true,
-      "experimentalObjectRestSpread": true
+      "jsx": true
     }
   },
   "rules": {
-    semi: [2, "never"],
-    'react/jsx-no-bind': 0,
-    no-else-return: 0,
-    arrow-body-style: 0,
-    no-console: 0,
-    'react/prefer-stateless-function': 0,
+    "semi": [2, "never"],
+    "react/jsx-no-bind": 0,
+    "no-else-return": 0,
+    "arrow-body-style": 0,
+    "no-console": 0,
+    "react/prefer-stateless-function": 0,
     "import/no-unresolved": [
       2, { "ignore": ["^meteor/"] }
     ],
-    no-underscore-dangle: 0,
-    arrow-parens: [1, "as-needed"]
+    "no-underscore-dangle": 0,
+    "arrow-parens": [1, "as-needed"],
+    "consistent-return": 0
   }
 }
